--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,11 @@ header
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.team.svg svg
+{
+    margin-top: 4px;
+}
+
 .team:hover,
 .team:focus
 {
