--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,9 @@ header
     background-color: #4D5AE5;
     width: 40px;
     height: 40px;
-    padding: 8px 8px 8px 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .svg-customers
@@ -513,9 +515,11 @@ header
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team.svg svg
+.svg-footer
 {
-    margin-top: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .team:hover,
@@ -684,6 +688,273 @@ header
     margin-top: 8px;
     margin-right: 8px;
     box-sizing: border-box;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    align-content: center;
+}
+
+.about-item
+{
+    justify-content: space-between;
+    margin-bottom: 0;
+    position: relative;
+}
+
+.about-item:not(:last-child)
+{
+    margin-right: 30px;
+}
+
+.about-label
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.143;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: #FFF;
+    height: 70px;
+    padding: 27px 0;
+}
+
+.join-us
+{
+    text-transform: uppercase;
+    margin-top: 12px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+}
+
+label
+{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.form-phone,
+.form-name,
+.form-email
+{
+    position: relative;
+}
+
+.form-phone .form-icon,
+.form-name .form-icon,
+.form-email .form-icon
+{
+    position: absolute;
+    top: 50%;
+    left: 14px;
+}
+
+textarea
+{
+    resize: none;
+    height: 120px;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.signup-form
+{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+form .form-head
+{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.172;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 40px;
+    margin-bottom: 12px;
+}
+
+form .form-name,
+form .form-phone,
+form .form-email,
+form .form-feedback
+{
+    font-size: 12px;
+    line-height: 1.172;
+    margin-top: 10px;
+    padding-bottom: 4px;
+    color: #757575;
+}
+
+.form-name input,
+.form-phone input,
+.form-email input,
+.form-feedback textarea
+{
+    margin-top: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+}
+
+.form-name input:focus,
+.form-phone input:focus,
+.form-email input:focus,
+.form-feedback textarea:focus
+{
+    outline: none;
+    border: 1px solid #2196f3;
+    box-sizing: border-box;
+    border-radius: 4px;
+    fill: #2196f3;
+}
+
+.form-name input,
+.form-phone input,
+.form-email input
+{
+    height: 40px;
+}
+
+.form-feedback textarea
+{
+    height: 120px;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    color: rgba(117, 117, 117, 0.5);
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.01em;
+}
+
+.agree-submit
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal-form-policy-txt
+{
+    display: inline;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+.modal-form-policy-txt input
+{
+    margin-right: 8px;
+}
+
+.modal-form-policy-txt a
+{
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: #2196f3;
+}
+
+.modal-form-policy-txt::before
+{
+    content: "";
+    display: inline-block;
+    margin-right: 7px;
+    top: 1px;
+    width: 16px;
+    height: 15px;
+    border: 1px solid #212121;
+}
+
+.modal-form-policy:checked
++ .modal-form-policy-txt::before
+{
+    background-color: #2196f3;
+    border: 1px solid #ffffff;
+    border-radius: 2px;
+    background-image: url("../images/checked.svg");
+    background-repeat: no-repeat;
+    background-position: 1px;
+}
+
+.signup-form button
+{
+    background-color: #2196f3;
+    color: #ffffff;
+    font: "Roboto";
+    font-size: 16px;
+    font-weight: 700;
+    border: 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.newsletter-form-email
+{
+    background: none;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+    margin-right: 12px;
+}
+
+.newsletter-form-email:focus
+{
+    color: #757575;
+    outline: none;
+    border-color: #2196f3;
+}
+
+.newsletter-form-btn
+{
+    background-color: #2196f3;
+    color: #ffffff;
+    font: "Roboto";
+    border: 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+    fill: #ffffff;
+}
+
+.newsletter-btn-flex
+{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+}
+
+.newsletter-btn-icon
+{
+    margin-left: 24px;
+    width: 24px;
+    height: 24px;
 }
 
 :root
